syntax = "proto3";

package helloworld;

service Hello {
  rpc Greeting (SvcRequest) returns (SvcResponse) {}
  rpc StreamGreeting (SvcRequest) returns (stream SvcResponse) {}
}

service World {
  rpc Greeting (SvcRequest) returns (SvcResponse) {}
}

message SvcRequest {}

message SvcResponse {
  string message = 1;
}
